--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -21,8 +21,9 @@ h3{
 }
 
 section{
-	padding: 0;
 	position:relative;
+	padding: 0;
+	margin: 0;
 	height: auto;
 	width:100%;
 	min-height:100%;
@@ -65,47 +66,14 @@ hr{
 .overlay{
 	height:100%;
     background-color: rgba(51,51,51, 0.78);
+	padding-bottom:30px
 }
-.sec1nav{
-	width:100%;
-	float:left;
-	z-index:8;
-}
-.nav-img{
-	height:25px;
-	width:25px;
-	opacity: 0;
-	margin: 0 auto auto 10px;
-	-webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-}
-.nav-img-hover{
-	height:35px;
-	width:35px;
-	margin-left:5px;
-	opacity: 0.6;
-}
+
 .img-inverted{
-	-webkit-filter:invert(100%);
+	-webkit-filter: invert(100%);
 	filter: invert(100%)
 }
-.sec1nav,
-.nav-ul{
-	position:fixed;
-	border:none;
-	background: rgba(1, 1, 1, 0);
-	margin-top:10px;
-	margin-left:10px;
-}
-@media(min-width:768px) {
-	.sec1nav,
-	.nav-ul{
-		margin-top:20px;
-		margin-left:10px;
-	}
-}
+
 .btn1 {
     color: #1a1a1a;
 	font-size:20px;
@@ -153,7 +121,7 @@ hr{
 }
 
 .inverted{
-	-webkit-filter:invert(100%);
+	-webkit-filter: invert(100%);
 	filter: invert(100%);
 }
 
@@ -186,19 +154,43 @@ hr{
     -moz-transform: translate(0,10px);
 }
 */
-/*--------------------start brand---------------*/
-.animated-fast {
-  -webkit-animation-duration: 0.2s;
-  animation-duration: 0.2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
 
+/*--------------------start brand---------------*/
+.sec1nav{
+	position:fixed;
+	width:100%;
+	z-index:8;
+}
+.sec1nav,
+.nav-ul{
+	border:none;
+	background: rgba(1, 1, 1, 0);
+	float:left
+}
+.sec1nav{
+	margin-top:10px;
+	margin-left:10px;
+}
+@media(min-width:768px) {
+	.sec1nav{
+		margin-top:40px;
+		margin-left:20px;
+	}
+}
 .sec1nav-brand{
 	position:relative;
-	top:3px;
+	height:1em;
 	text-transform: uppercase;
 	opacity:0
+}
+@media(max-width:768px) {
+	.sec1nav-brand{
+		opacity:1;
+	}
+}
+.sec1nav-brand a{
+	float:left;
+	text-align: left;
 }
 .sec1nav-brand hr{
     margin-top: 0.5em;
@@ -208,29 +200,30 @@ hr{
     border-style: solid;
     border-width: 2px;
 	border-color:#fff;
-	width:20px;
 	float:left;
-}
-.sec1nav-brand span{
-	display:inline-block;
-	font-size:28px;
-	padding: 10px 0 0 0;
-	color:#fff;
-}
-.sec1nav-brand div{
-	position:relative;
-	top:10px;
-	display:inline-block;
-	color:#fff;
-	font-size:28px;
-	width: 0;
-	overflow:hidden;
-	text-align:left
-}
-.sec1nav-brand hr{
 	width:35px;
 	opacity:0;
+}
+.sec1nav-brand .steady{
+	position:relative;
+	display:inline-block;
+	font-size:28px;
+	height:1em;
+	padding:0;
+	margin:0;
 	color:#fff;
+}
+.sec1nav-brand .zoom{
+	position:relative;
+	display:inline-block;
+	font-size:28px;
+	width: 0;
+	height:1em;
+	padding:0;
+	margin:0;
+	color:#fff;
+	overflow-x:hidden;overflow-y:visible;
+	text-align:left
 }
 .dd{
 	position:absolute;
@@ -244,6 +237,35 @@ hr{
 	color:#fff;
 	z-index:7
 }
+
+.nav-img-wrapper{
+	position:relative;
+	display:inline-block;
+	margin-top:0;
+	
+	margin-left: 10px;
+}
+.nav-img{
+	height:25px;
+	width:25px;
+	opacity: 0;
+	-webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+@media(max-width:768px) {
+	.nav-img{
+		opacity: 1;
+	}
+}
+.nav-img-hover{
+	height:35px;
+	width:35px;
+	margin-left:-5px;
+	opacity: 0.6;
+}
+
 /*----------end brand---------------*/
 
 /*--------------------start left menu---------------*/
@@ -264,12 +286,19 @@ hr{
 #sidebar-wrapper.toggled{
     margin-left: 0;
 }
+@media(max-width:400px) {
+	#sidebar-wrapper {
+		width: 100%;
+    	margin-left: -100%;
+		overflow: hidden;
+	}
+}
 
 /* Sidebar Styles */
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 400px;
+    width: 100%;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -306,14 +335,14 @@ hr{
 }
 */
 .myTable{
-	width:400px;
+	width:100%;
 	margin:0;
 	font-size:24px
 }
 .myTable .row{
 	border:none;
 	height:50px;
-	width:400px;
+	width:100%;
 	padding:0;
 	margin:0
 }
@@ -358,13 +387,18 @@ hr{
 .closeButton{
 	position:absolute;
 	top:140px;
-	margin-left:350px;
+	margin-right:10px;
+	right:10px;
 }
 #menu-close{
 	opacity: 1;
 }
 .slider-img-wrapper{
 	height:160px;
+	width:50%;
+	float: left;
+	min-width:150px;
+	text-align:center
 }
 .slider-img{
 	position:absolute;
@@ -381,6 +415,14 @@ hr{
 	background-color:#fff;
 	padding-top:60px;
 	left:25px;
+}
+@media(max-width:400px) {
+	.slider-img{
+		left:10px;
+	}
+	.slider-img-words{
+		left:10px;
+	}
 }
 .flip-container {
 	perspective: 1000px;
@@ -424,6 +466,12 @@ hr{
 /*----------end left menu---------------*/
 
 /*---------animations---------------*/
+.animated-fast {
+  -webkit-animation-duration: 0.2s;
+  animation-duration: 0.2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
 .animated-slow {
   -webkit-animation-duration: 2s;
   animation-duration: 2s;
@@ -632,6 +680,11 @@ hr{
 	text-align:center;
 	z-index:10;
 }
+@media(max-width:768px) {
+	.preloader-wrapper{
+		display:none
+	}
+}
 .preloader-wrapper img{
 	position:relative;
 	float:left;
@@ -690,6 +743,11 @@ hr{
 	height:90%;
 	margin-top:8%;
 	opacity: 0;
+}
+@media(max-width:768px) {
+	#sec1-content{
+		opacity:1
+	}
 }
 #chu-logo{
 	width:180px;
@@ -780,14 +838,15 @@ hr{
 	background-size:contain;
 	background-repeat: no-repeat;*/
 	background-color:rgba(255,255,255,0.97);
-	min-height:768px;
-	overflow:hidden;
+	min-height:600px;
 	z-index:2
 }
 #sec2-content{
 	position:relative;
 	width:100%;
-	height:100%
+	height:100%;
+	margin:0;
+	padding:0
 }
 /*
 .sec2nav{
@@ -914,16 +973,25 @@ hr{
 	background: rgba(255,255,255,0.8);
 }
 .lighter-gradient{
-	background: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(255,255,255,1));
+	background: rgba(255,255,255,0.5); /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1)); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1));
 }
 
 #sec2-content .row{
 	position:absolute;
+	height:100%;
 	width:100%;
 	margin:0;
 	padding:0 100px;
-	top:-50px;
-	overflow:hidden
+	top:0;
+}
+@media(min-width:768px) {
+	#sec2-content .row{
+		overflow:hidden
+	}
 }
 .leftimg{
 	margin-left:5%;
@@ -942,7 +1010,7 @@ hr{
 	position:absolute;
 	margin-left:30%;
     padding: 0 100px;
-	top:500px;
+	top:450px;
 }
 .aboutright h1 {
     text-transform: uppercase;
@@ -998,11 +1066,14 @@ hr{
 	.leftimg{
 		display:none
 	}
+	#sec2-content .row{
+		padding:0
+	}
 	.aboutright{
 		position:relative;
 		margin-left:0;
 		top:0;
-		padding: 100px 0 0 0 ;
+		padding: 50px 0 50px 0;
 	}
 	.aboutright-inner {
 		width:100%;
@@ -1098,6 +1169,10 @@ hr{
 	background-color: rgba(255,255,255,0.97);
 	min-height:768px;
 }
+#sec4-content{
+	position:relative;
+	padding-bottom:100px
+}
 #sec4 .row{
 	margin-top:150px;
 }
@@ -1157,8 +1232,11 @@ hr{
 	#sec4 .row{
 		margin-top:0;
 	}
+	#sec4-content{
+		margin-bottom:30px;
+	}
 	.pp-wrapper{
-		margin:30px 0;
+		margin-top:30px;
 	}
 	.pimg-wrapper{
 		margin-top:30px;
@@ -1172,7 +1250,8 @@ hr{
 	background-size:cover;
 	background-repeat: no-repeat;
     background-attachment: fixed;
-	color:#fff
+	color:#fff;
+	overflow:visible
 }
 .social-button {
     margin: 0;
@@ -1254,7 +1333,12 @@ hr{
 .wechat-dropup{
 	display:none
 }
-@media(max-width:480px) {
+.barcode{
+	position:relative;
+	border-radius: 5px;
+	z-index:9;
+}
+@media(max-width:768px) {
 	.hoverhints{
 		display:none
 	}
@@ -1271,7 +1355,6 @@ hr{
 	background-size: cover;
 	background-repeat:no-repeat;
 	text-align:left;
-	overflow-y:auto;
 	color:#1a1a1a;
 }
 .sec6mask{
@@ -1280,7 +1363,11 @@ hr{
 	padding:0;
 	width:100%;
 	height:100%;
-	background: linear-gradient(to bottom, rgba(215,215,215,1), rgba(215,215,215,0.9), rgba(215,215,215,0.7));
+	background: rgba(255,255,255,0.9); /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(rgba(215,215,215,1), rgba(215,215,215,0.9), rgba(215,215,215,0.7)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(215,215,215,1), rgba(215,215,215,0.9), rgba(215,215,215,0.7)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(215,215,215,1), rgba(215,215,215,0.9), rgba(215,215,215,0.7)); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(rgba(215,215,215,1), rgba(215,215,215,0.9), rgba(215,215,215,0.7));
 }
 #sec6-content{
 	position:relative;
@@ -1346,62 +1433,67 @@ textarea.form-control {
     line-height: 50px;
 	margin-top:30px
 }
-
+.contact-details span,
 .contact-details p i {
-    margin-left: 30%;
+    margin-left: 0;
 	color:#1a1a1a;
-	-webkit-transform: translate(-50%,0);
-    -o-transform: translate(-50%,0); 
-    -moz-transform: translate(-50%,0);
-	transform: translate(-50%,0);
-	-webkit-transition: all 0.3s ease 0s;
-       -moz-transition: all 0.3s ease 0s;
-        -ms-transition: all 0.3s ease 0s;
-         -o-transition: all 0.3s ease 0s;
-            transition: all 0.3s ease 0s;
 }
-@media(max-width:480px) {
-	.contact-details p i {
-    	margin-left: 50%;
-	}
-}
-.contact-details span {
+.contact-details span{
+	padding-left: 10px;
+	font-size: 20px;
 	position:absolute;
-    display: inline-block;
-	margin-top:5px;
-    margin-left: -200px;
-	font-size:28px;
-	-webkit-transition: all 0.3s ease 0s;
-       -moz-transition: all 0.3s ease 0s;
-        -ms-transition: all 0.3s ease 0s;
-         -o-transition: all 0.3s ease 0s;
-            transition: all 0.3s ease 0s;
-	clip:rect(0px,300px,100px,300px);
+	display: inline-block;
 }
-.contact-details p:hover span{
-    -webkit-transform: translate(120px,0);
-    -o-transform: translate(120px,0); 
-    -moz-transform: translate(120px,0);
-	transform: translate(120px,0);
-	clip:rect(0px,300px,100px,0px);
-}
-.contact-details p:hover i{
-    -webkit-transform: translate(-100px,0);
-    -o-transform: translate(-100px,0); 
-    -moz-transform: translate(-100px,0);
-	transform: translate(-100px,0);
-}
-.contact-details p:hover .fa-github, .hidespan1{
-	color:#FC4E46
-}
-.contact-details p:hover .fa-envelope, .hidespan2{
-	color:#FCFC60
-}
-.contact-details p:hover .fa-skype, .hidespan3{
-	color:#009EE3
-}
-.contact-details p:hover .fa-phone, .hidespan4{
-	color:#00C045
+@media(min-width:768px) {
+	.contact-details p i {
+		margin-left: 30%;
+		-webkit-transform: translate(-50%,0);
+		-o-transform: translate(-50%,0); 
+		-moz-transform: translate(-50%,0);
+		transform: translate(-50%,0);
+		-webkit-transition: all 0.3s ease 0s;
+		   -moz-transition: all 0.3s ease 0s;
+			-ms-transition: all 0.3s ease 0s;
+			 -o-transition: all 0.3s ease 0s;
+				transition: all 0.3s ease 0s;
+	}
+	
+	.contact-details span {
+		margin-top:5px;
+		margin-left: -200px;
+		font-size:28px;
+		-webkit-transition: all 0.3s ease 0s;
+		   -moz-transition: all 0.3s ease 0s;
+			-ms-transition: all 0.3s ease 0s;
+			 -o-transition: all 0.3s ease 0s;
+				transition: all 0.3s ease 0s;
+		clip:rect(0px,300px,100px,300px);
+	}
+	.contact-details p:hover span{
+		-webkit-transform: translate(120px,0);
+		-o-transform: translate(120px,0); 
+		-moz-transform: translate(120px,0);
+		transform: translate(120px,0);
+		clip:rect(0px,300px,100px,0px);
+	}
+	.contact-details p:hover i{
+		-webkit-transform: translate(-100px,0);
+		-o-transform: translate(-100px,0); 
+		-moz-transform: translate(-100px,0);
+		transform: translate(-100px,0);
+	}
+	.contact-details p:hover .fa-github, .hidespan1{
+		color:#FC4E46
+	}
+	.contact-details p:hover .fa-envelope, .hidespan2{
+		color:#FCFC60
+	}
+	.contact-details p:hover .fa-skype, .hidespan3{
+		color:#009EE3
+	}
+	.contact-details p:hover .fa-phone, .hidespan4{
+		color:#00C045
+	}
 }
 
 /*TEMP*/
