--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -1098,7 +1098,9 @@ hr{
 	color:#fff;
 	z-index:1
 }
-
+#sec3-content{
+	padding-bottom:100px
+}
 .service-icon {
 	font-size:16px;
     border: 3px solid transparent;
@@ -1483,16 +1485,16 @@ textarea.form-control {
 		transform: translate(-100px,0);
 	}
 	.contact-details p:hover .fa-github, .hidespan1{
-		color:#FC4E46
+		color:#FC4E46 !important
 	}
 	.contact-details p:hover .fa-envelope, .hidespan2{
-		color:#FCFC60
+		color:#FCFC60 !important
 	}
 	.contact-details p:hover .fa-skype, .hidespan3{
-		color:#009EE3
+		color:#009EE3 !important
 	}
 	.contact-details p:hover .fa-phone, .hidespan4{
-		color:#00C045
+		color:#00C045 !important
 	}
 }
 
