--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -1,3 +1,13 @@
+@charset "UTF-8";
+/*!
+ * chu-custom.css
+ * Version - 1.1
+ * Copyright (c) 2016 Tianxin Chu
+ */
+ 
+/*=================================================================
+	General
+==================================================================*/
 html,
 body {
     width: 100%;
@@ -154,8 +164,17 @@ hr{
     -moz-transform: translate(0,10px);
 }
 */
-
-/*--------------------start brand---------------*/
+footer{
+	height:80px;
+	background-color:#1a1a1a;
+	text-align:center;
+	padding-top:30px;
+	color: rgba(255,255,255,0.6);
+	font-size:16px;
+}
+/*=================================================================
+	branding
+==================================================================*/
 .sec1nav{
 	position:fixed;
 	width:100%;
@@ -276,9 +295,9 @@ hr{
 		    	transform: translate(-20px,0) rotate(45deg);
 	}
 }
-/*----------end brand---------------*/
-
-/*--------------------start left menu---------------*/
+/*=================================================================
+	Left Slidebar
+==================================================================*/
 #sidebar-wrapper {
     z-index: 9;
     position: fixed;
@@ -472,9 +491,9 @@ hr{
 .back {
 	transform: rotateY(180deg);
 }
-/*----------end left menu---------------*/
-
-/*---------animations---------------*/
+/*=================================================================
+	Animations
+==================================================================*/
 .animated-fast {
   -webkit-animation-duration: 0.2s;
   animation-duration: 0.2s;
@@ -593,7 +612,6 @@ hr{
   	-webkit-transform-origin: center bottom;
   	transform-origin: center bottom;
 }
-
 /*
 @-webkit-keyframes hand-wave {
   from {
@@ -652,7 +670,6 @@ hr{
   animation-name: hand-wave;
 }
 */
-
 @-webkit-keyframes fadeInUp-light {
   from {
     opacity: 0;
@@ -708,9 +725,9 @@ hr{
   -webkit-animation: pileUp-right 0.5s forwards ease-out;
   animation: pileUp-right 0.5s forwards ease-out;
 }
-
-/*---------end animations---------------*/
-
+/*=================================================================
+	preloader
+==================================================================*/
 .preloader-wrapper{
 	position:fixed;
 	top:0;
@@ -747,7 +764,9 @@ hr{
 		transform: translate(-55%,0);
 	}
 }
-/*-------section 1----------*/
+/*=================================================================
+	sec1
+==================================================================*/
 #sec1{
 	position:relative;
 	padding:100px 0;
@@ -778,7 +797,6 @@ hr{
 	margin-left: -30px;
 	z-index:3
 }
-
 #sec1-content{
 	position:relative;
 	height:90%;
@@ -852,7 +870,6 @@ hr{
 	padding-top:3%;
 	color: #C7C7C7;
 }
-
 .sec1-p-span{
 	display:inline-block;
 	color:#fff;
@@ -861,7 +878,6 @@ hr{
     -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
 }
-
 .chu-down{
 	position:absolute;
 	bottom:-30px;
@@ -879,8 +895,9 @@ hr{
 	width:auto;
 	opacity:0.6
 }
-
-/*-------section 2----------*/
+/*=================================================================
+	sec2 introduction
+==================================================================*/
 #sec2{
 	position:relative;
 /*	background-image:url(../imgs/colors.jpg);
@@ -1028,7 +1045,6 @@ hr{
     background: -moz-linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1)); /* For Firefox 3.6 to 15 */
 	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1));
 }
-
 #sec2-content .row{
 	position:absolute;
 	height:100%;
@@ -1054,7 +1070,6 @@ hr{
 	height:auto;
 	margin:0;
 }
-
 .aboutright {
 	position:absolute;
 	margin-left:30%;
@@ -1073,12 +1088,10 @@ hr{
     padding-bottom: 50px;
     width: 64%;
 }
-
 .aboutright-inner > div {
     line-height: 30px;
     position: relative;
 }
-
 .aboutright-inner > div:before {
     background-image: url("../imgs/icons/quotes.png");
     background-repeat: no-repeat;
@@ -1089,7 +1102,6 @@ hr{
     width: 45px;
 	opacity:0.6
 }
-
 .aboutright-inner > div:after {
     background-image: url("../imgs/icons/quotes.png");
     background-position: -58px 0;
@@ -1101,14 +1113,12 @@ hr{
     width: 45px;
 	opacity:0.6
 }
-
 .aboutright-inner > div > span {
     display: inline-block;
 	font-size:24px;
 	font-weight:bold;
     margin: 10px 0 30px;
 }
-
 @media(max-width:480px) {
 	.slid-wrapper,
 	.sec2mask,
@@ -1138,7 +1148,6 @@ hr{
 		bottom: -50px;
 	}
 }
-
 /*=================================================================
 	sec3 skills
 ==================================================================*/
@@ -1163,20 +1172,17 @@ hr{
     line-height: 101px;
 	-webkit-filter: brightness(0) invert(1); /* Chrome, Safari, Opera */
     filter: brightness(0) invert(1);
-
     -webkit-transform: rotate(45deg);
        -moz-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
          -o-transform: rotate(45deg);
             transform: rotate(45deg);
-
     -webkit-transition: all 0.3s ease 0s;
        -moz-transition: all 0.3s ease 0s;
         -ms-transition: all 0.3s ease 0s;
          -o-transition: all 0.3s ease 0s;
             transition: all 0.3s ease 0s;
 }
-
 .service-item:hover .service-icon {
     margin-bottom: 20px;
 	-webkit-filter: none; /* Chrome, Safari, Opera */
@@ -1219,7 +1225,9 @@ hr{
     font-size: 16px;
 	opacity:0.7
 }
-/*-------section 4----------*/
+/*=================================================================
+	sec4 portfolio
+==================================================================*/
 #sec4{
 	background-color: rgba(255,255,255,0.97);
 	min-height:768px;
@@ -1261,7 +1269,6 @@ hr{
          -o-transition: all 0.3s ease;
             transition: all 0.3s ease;
 }
-
 .pimg-wrapper:hover .pimg-code{
 	position:absolute;
 	opacity:1;
@@ -1274,15 +1281,12 @@ hr{
     transform: scale3d(.9, .9, .9) translate3d(-10%, 5%, 0);
 	opacity:0.2
 }
-
-
 .pp-wrapper{
 	padding-top:100px;
 }
 .pp-wrapper p{
 	padding-top:20px;
 }
-
 @media(max-width:480px) {
 	#sec4{
 		min-height:0;
@@ -1318,15 +1322,12 @@ hr{
     text-align: center;
 	font-size:20px
 }
-
 .social-button li {
     display: inline-block;
 }
-
 .social-button li:nth-child(2) {
     margin: 0 75px;
 }
-
 .social-button li a {
     border: 2px solid #fff;
     border-radius: 50%;
@@ -1336,14 +1337,12 @@ hr{
     line-height: 96px;
     width: 90px;
 	opacity:0.6;
-    
     -webkit-transition: all 0.2s ease 0s;
        -moz-transition: all 0.2s ease 0s;
         -ms-transition: all 0.2s ease 0s;
          -o-transition: all 0.2s ease 0s;
             transition: all 0.2s ease 0s;
 }
-
 .social-button li a:hover {
     color: #fff;
     border: 2px solid #fff;
@@ -1436,6 +1435,23 @@ hr{
 	position:relative;
 	z-index:2
 }
+#sec6-content .row{
+	padding-bottom:30px
+}
+#sec6-content .sec-title .sec6titleh2, .sec6titlep{
+	-webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+#sec6-content .sec-title .sec6titleh2{
+	font-size:36px;
+	opacity:1
+}
+#sec6-content .sec-title .sec6titlep{
+	font-size:20px;
+	opacity:0.7
+}
 /*
 #sec6::before {
     content: '';
@@ -1446,11 +1462,9 @@ hr{
 		left: 0;
 		background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(215,215,215,1)),to(rgba(215,215,215,0.7)), color-stop(.4,rgba(255,255,255,0.97)));
 */
-
 .input-field {
     margin-bottom: 10px;
 }
-
 .form-control {
     border: 1px solid #ececec;
     border-radius: 2px;
@@ -1460,7 +1474,6 @@ hr{
     height: 50px;
 	background-color: #EEEEEE;
 }
-
 textarea.form-control {
     width: 100%;
     height: 165px;
@@ -1483,10 +1496,10 @@ textarea.form-control {
 	height: 50px;
 	margin-top:15%;
 	
- }
- */
-.form-headline,
-.contact-details h3 {
+}
+*/
+.form-headline{
+	font-size:28px;
     margin-bottom: 15px;
 }
 .contact-details-wrapper{
@@ -1508,6 +1521,28 @@ textarea.form-control {
 	display: inline-block;
 }
 @media(min-width:768px) {
+	#sec6-content .sec-title:hover .sec6titleh2{
+		opacity:0.7;
+		font-size:20px;
+		-webkit-transform: translate(0,80px);
+		-o-transform: translate(0,80px);
+		-moz-transform: translate(0,80px);
+		transform: translate(0,80px);
+	}
+	#sec6-content .sec-title:hover .sec6titlep{
+		opacity:1;
+		font-size:40px;
+		-webkit-transform: translate(0,-80px);
+		-o-transform: translate(0,-80px);
+		-moz-transform: translate(0,-80px);
+		transform: translate(0,-80px);
+	}
+	#sec6-content .sec-title:hover hr{
+		-webkit-transform: translate(0,10px);
+		-o-transform: translate(0,10px);
+		-moz-transform: translate(0,10px);
+		transform: translate(0,10px);
+	}
 	.contact-details p i {
 		margin-left: 30%;
 		-webkit-transform: translate(-50%,0);
@@ -1520,7 +1555,6 @@ textarea.form-control {
 			 -o-transition: all 0.3s ease 0s;
 				transition: all 0.3s ease 0s;
 	}
-	
 	.contact-details span {
 		margin-top:5px;
 		margin-left: -200px;
@@ -1558,7 +1592,6 @@ textarea.form-control {
 		color:#00C045 !important
 	}
 }
-
 /*TEMP*/
 form p{
 	font-size:16px;
@@ -1567,21 +1600,10 @@ form p{
 /*============================================================
 	Google Maps
 ==============================================================*/
-
 #google-map {
     padding: 0;
 }
-
 #map-canvas {
     width: 100%;
     height: 400px;
-}
-/*----------------end google map-----------------*/
-footer{
-	height:80px;
-	background-color:#1a1a1a;
-	text-align:center;
-	padding-top:30px;
-	color: rgba(255,255,255,0.6);
-	font-size:16px;
 }
