--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -53,6 +53,7 @@ a:hover,
 li,
 li:active,
 li:focus{
+	list-style:none !important;
 	text-decoration: none !important;
 	color:#fff;
 }
@@ -104,6 +105,11 @@ hr{
 	border:solid 1px #1a1a1a;
 	margin-top:50px;
 	padding-left:5px
+}
+@media(max-width:480px) {
+	.btn2{
+		margin-top:10px;
+	}
 }
 /*
 .btn1:hover {
@@ -380,7 +386,8 @@ footer{
 	height:100%
 }
 .myTable .td-words{
-	padding-top:10px; 
+	padding-top:10px;
+	color:#fff;
 	-webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
@@ -1118,7 +1125,7 @@ footer{
 	font-weight:bold;
     margin: 10px 0 30px;
 }
-@media(max-width:480px) {
+@media(max-width:768px) {
 	.slid-wrapper,
 	.sec2mask,
 	.leftimg{
@@ -1317,18 +1324,18 @@ footer{
 	color:#fff;
 	overflow:visible
 }
+#sec5-content .row{
+	margin:0
+}
 .social-button {
-    margin: 0;
-    padding: 0;
     list-style: none;
     text-align: center;
 	font-size:20px
 }
-.social-button li {
-    display: inline-block;
-}
-.social-button li:nth-child(2) {
-    margin: 0 75px;
+.social-button li div{
+	width:90px;
+	position:relative;
+	display:inline-block
 }
 .social-button li a {
     border: 2px solid #fff;
@@ -1336,9 +1343,11 @@ footer{
     color: #fff;
     display: block;
     height: 90px;
-    line-height: 96px;
     width: 90px;
+    line-height: 96px;
 	opacity:0.6;
+	padding:0;
+	margin:0;
     -webkit-transition: all 0.2s ease 0s;
        -moz-transition: all 0.2s ease 0s;
         -ms-transition: all 0.2s ease 0s;
@@ -1356,21 +1365,21 @@ footer{
 	font-size:14px;
 	opacity:0.6;
 }
+.hoverhints li{
+	opacity:0
+}
 .fa-facebook{
 	-webkit-transform: translate(0,2px);
     -o-transform: translate(0,2px); 
     -moz-transform: translate(0,2px);
 	transform: translate(0,2px);
 }
-.dropup{
-	position:relative;
-	display:inline-block
-}
 #wechatlink .dropup .dropdown-menu{
 	height:400px; 
 	left:150px; 
 	bottom:-100px
 }
+/*
 #facebookhint{
 	position:absolute;
 	left:50%;
@@ -1389,6 +1398,7 @@ footer{
 	margin-left:125px;
 	opacity:0
 }
+*/
 .wechat-dropup{
 	display:none
 }
@@ -1503,13 +1513,14 @@ textarea.form-control {
 .form-headline{
 	font-size:28px;
     margin-bottom: 15px;
+	text-align:center
 }
 .contact-details p {
     line-height: 50px;
+	text-align:center
 }
 .contact-details span,
 .contact-details p i {
-    margin-left: 0;
 	color:#1a1a1a;
 }
 .contact-details span{
@@ -1517,6 +1528,15 @@ textarea.form-control {
 	font-size: 20px;
 	position:absolute;
 	display: inline-block;
+	opacity:0.4
+}
+@media(max-width:480px) {
+	.contact-details p {
+		text-align: left
+	}
+	.contact-details span{
+		opacity:1
+	}
 }
 @media(min-width:768px) {
 	#sec6-content .row{
@@ -1544,11 +1564,15 @@ textarea.form-control {
 		-moz-transform: translate(0,10px);
 		transform: translate(0,10px);
 	}
+	.form-headline{
+		text-align:left
+	}
 	.contact-details-wrapper{
 		padding-top:20px
 	}
 	.contact-details p{
-		margin-top:30px
+		margin-top:30px;
+		text-align:left
 	}
 	.contact-details p i {
 		margin-left: 30%;
@@ -1563,6 +1587,7 @@ textarea.form-control {
 				transition: all 0.3s ease 0s;
 	}
 	.contact-details span {
+		opacity:1;
 		margin-top:5px;
 		margin-left: -200px;
 		font-size:28px;
@@ -1602,6 +1627,7 @@ textarea.form-control {
 /*TEMP*/
 form p{
 	font-size:16px;
+	text-align:center;
 	opacity:0.8
 }
 /*============================================================
