--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -405,10 +405,10 @@ footer{
 	background-color:#FCFC60
 }
 .td-b{
-	background-color:#6DE6FF
+	background-color:#009EE3
 }
 .td-g{
-	background-color:#6BFF8E
+	background-color:#00C045
 }
 /*
 .myTable td:hover{
@@ -585,12 +585,12 @@ footer{
 }
 
 @-webkit-keyframes charge-long-g{
-    0%{box-shadow: inset 0px 0px 0px #6BFF8E;}
-    100%{box-shadow: inset 400px 0px 0px #6BFF8E;}
+    0%{box-shadow: inset 0px 0px 0px #00C045;}
+    100%{box-shadow: inset 400px 0px 0px #00C045;}
 }
 @keyframes charge-long-g{
-    0%{box-shadow: inset 0px 0px 0px #6BFF8E;}
-    100%{box-shadow: inset 400px 0px 0px #6BFF8E;}
+    0%{box-shadow: inset 0px 0px 0px #00C045;}
+    100%{box-shadow: inset 400px 0px 0px #00C045;}
 }
 .charged-long-g{
 	-webkit-animation: charge-long-g 0.3s forwards ease-in-out;
@@ -598,12 +598,12 @@ footer{
 }
 
 @-webkit-keyframes charge-long-b{
-    0%{box-shadow: inset 0px 0px 0px #6DE6FF;}
-    100%{box-shadow: inset 400px 0px 0px #6DE6FF;}
+    0%{box-shadow: inset 0px 0px 0px #009EE3;}
+    100%{box-shadow: inset 400px 0px 0px #009EE3;}
 }
 @keyframes charge-long-b{
-    0%{box-shadow: inset 0px 0px 0px #6DE6FF;}
-    100%{box-shadow: inset 400px 0px 0px #6DE6FF;}
+    0%{box-shadow: inset 0px 0px 0px #009EE3;}
+    100%{box-shadow: inset 400px 0px 0px #009EE3;}
 }
 .charged-long-b{
 	-webkit-animation: charge-long-b 0.3s forwards ease-in-out;
@@ -803,6 +803,12 @@ footer{
 	margin-left: -30px;
 	z-index:3
 }
+@media(max-width:480px) {
+	.arrow_box:after {
+		border-width: 10px;
+		margin-left: -10px;
+	}
+}
 #sec1-content{
 	position:relative;
 	height:90%;
@@ -874,7 +880,7 @@ footer{
 }
 #sec1-p{
 	padding-top:3%;
-	color: #C7C7C7;
+	color:rgba(255,255,255,0.5);
 }
 .sec1-p-span{
 	display:inline-block;
@@ -910,7 +916,6 @@ footer{
 	background-size:contain;
 	background-repeat: no-repeat;*/
 	background-color:rgba(255,255,255,0.97);
-	min-height:600px;
 	z-index:2
 }
 #sec2-content{
@@ -1052,47 +1057,54 @@ footer{
 	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1));
 }
 #sec2-content .row{
-	position:absolute;
+	position: relative;
 	height:100%;
 	width:100%;
 	margin:0;
-	padding:0 100px;
+	padding:0;
 	top:0;
 }
 @media(min-width:768px) {
 	#sec2-content .row{
+		position: absolute;
 		overflow:hidden
 	}
 }
 .leftimg{
+	position:relative;
+	margin-top:10%;
 	margin-left:5%;
-	width:45%;
-	height:auto;
+	height:95%;
+	width:auto;
 	float:left;
 	overflow:hidden
 }
 .leftimg img{
-	width:100%;
-	height:auto;
+	height:100%;
+	width: auto;
 	margin:0;
 }
 .aboutright {
 	position:absolute;
-	margin-left:30%;
-    padding: 0 100px;
+	margin: auto 5% 5% 40%;
+    padding:0;
 	top:450px;
+	border-radius:5px;
+	background: rgba(255,255,255,0.3); /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.9)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.9)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.9)); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.9));
 }
 .aboutright h1 {
     text-transform: uppercase;
 }
-.aboutright p {
+.aboutright-inner {
+    margin: 0 5% 0 5%;
+}
+.aboutright-inner p {
 	font-size:24px;
 	line-height: 30px;
-}
-.aboutright-inner {
-    margin: 0 auto;
-    padding-bottom: 50px;
-    width: 64%;
 }
 .aboutright-inner > div {
     line-height: 30px;
@@ -1142,7 +1154,7 @@ footer{
 	}
 	.aboutright-inner {
 		width:100%;
-		padding:0;
+		padding: 0 15px 100px 15px;
 	}
 	.aboutright-inner p{
 		padding-top:30px
@@ -1168,6 +1180,11 @@ footer{
 }
 #sec3-content{
 	padding-bottom:100px
+}
+@media(max-width:768px){
+	#sec3-content{
+		padding-bottom:0
+	}
 }
 .service-icon {
 	font-size:16px;
@@ -1288,7 +1305,7 @@ footer{
 	opacity:0.2
 }
 .pp-wrapper{
-	padding-top:100px;
+	padding-top:50px;
 }
 .pp-wrapper p{
 	padding-top:20px;
@@ -1322,20 +1339,24 @@ footer{
 	background-repeat: no-repeat;
     background-attachment: fixed;
 	color:#fff;
-	overflow:visible
 }
+#sec5-content{
+	margin:0;
+	padding:0;
+	width:100%;}
 #sec5-content .row{
-	margin:0
+	margin:0;
+	width: 100%
 }
 .social-button {
     list-style: none;
-    text-align: center;
 	font-size:20px
 }
 .social-button li div{
 	width:90px;
 	position:relative;
-	display:inline-block
+	display:inline-block;
+	padding:0
 }
 .social-button li a {
     border: 2px solid #fff;
@@ -1346,8 +1367,6 @@ footer{
     width: 90px;
     line-height: 96px;
 	opacity:0.6;
-	padding:0;
-	margin:0;
     -webkit-transition: all 0.2s ease 0s;
        -moz-transition: all 0.2s ease 0s;
         -ms-transition: all 0.2s ease 0s;
@@ -1522,21 +1541,32 @@ textarea.form-control {
 .contact-details span,
 .contact-details p i {
 	color:#1a1a1a;
+	-webkit-transition: all 0.3s ease 0s;
+	   -moz-transition: all 0.3s ease 0s;
+		-ms-transition: all 0.3s ease 0s;
+		 -o-transition: all 0.3s ease 0s;
+			transition: all 0.3s ease 0s;
 }
 .contact-details span{
 	padding-left: 10px;
 	font-size: 20px;
 	position:absolute;
 	display: inline-block;
-	opacity:0.4
+	margin-left: -200px;
+	clip:rect(0px,300px,100px,300px);
 }
-@media(max-width:480px) {
-	.contact-details p {
-		text-align: left
-	}
-	.contact-details span{
-		opacity:1
-	}
+.contact-details p a:focus span{
+	-webkit-transform: translate(100px,0);
+	   -moz-transform: translate(100px,0);
+		 -o-transform: translate(100px,0); 
+			transform: translate(100px,0);
+	clip:rect(0px,300px,100px,0px);
+}
+.contact-details p a:focus i{
+	-webkit-transform: translate(-100px,0);
+	   -moz-transform: translate(-100px,0);
+	     -o-transform: translate(-100px,0); 
+			transform: translate(-100px,0);
 }
 @media(min-width:768px) {
 	#sec6-content .row{
@@ -1580,23 +1610,11 @@ textarea.form-control {
 		-o-transform: translate(-50%,0); 
 		-moz-transform: translate(-50%,0);
 		transform: translate(-50%,0);
-		-webkit-transition: all 0.3s ease 0s;
-		   -moz-transition: all 0.3s ease 0s;
-			-ms-transition: all 0.3s ease 0s;
-			 -o-transition: all 0.3s ease 0s;
-				transition: all 0.3s ease 0s;
 	}
 	.contact-details span {
 		opacity:1;
 		margin-top:5px;
-		margin-left: -200px;
 		font-size:28px;
-		-webkit-transition: all 0.3s ease 0s;
-		   -moz-transition: all 0.3s ease 0s;
-			-ms-transition: all 0.3s ease 0s;
-			 -o-transition: all 0.3s ease 0s;
-				transition: all 0.3s ease 0s;
-		clip:rect(0px,300px,100px,300px);
 	}
 	.contact-details p:hover span{
 		-webkit-transform: translate(120px,0);
