--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -111,13 +111,6 @@ hr{
 		margin-top:10px;
 	}
 }
-/*
-.btn1:hover {
-    color: #1a1a1a;
-    background-color: #e6e6e6;
-    border-color: #fff
-}
-*/
 
 .sec-title{
 	padding-top:100px;
@@ -161,14 +154,7 @@ hr{
     -moz-transform: translate(0,-5px);
 	transform: translate(0,-5px);
 }
-/*
-.hover-down{
-	transform: translate(0,10px);
-    -webkit-transform: translate(0,10px);
-    -o-transform: translate(0,10px); 
-    -moz-transform: translate(0,10px);
-}
-*/
+
 footer{
 	height:80px;
 	background-color:#1a1a1a;
@@ -177,6 +163,7 @@ footer{
 	color: rgba(255,255,255,0.6);
 	font-size:16px;
 }
+
 /*=================================================================
 	branding
 ==================================================================*/
@@ -300,6 +287,7 @@ footer{
 		    	transform: translate(-20px,0) rotate(45deg);
 	}
 }
+
 /*=================================================================
 	Left Slidebar
 ==================================================================*/
@@ -351,23 +339,6 @@ footer{
 	padding:0;
 	color:#fff;
 }
-
-/*	-webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-
-.slider-img:hover{
-	-webkit-transform:rotateY(180deg);
-	transform: rotateY(180deg);
-	opacity:0
-}
-.slider-img:hover .slider-img-words{
-	-webkit-transform:rotateY(180deg);
-	transform: rotateY(180deg);
-	opacity:1
-}
-*/
 .myTable{
 	width:100%;
 	margin:0;
@@ -410,15 +381,6 @@ footer{
 .td-g{
 	background-color:#00C045
 }
-/*
-.myTable td:hover{
-	background-color: #BBBABA;
-}
-.leftdropdown a{
-	background-color:transparent !important;
-	color: #BBBBBB !important
-}
-*/
 .closeButton{
 	position:absolute;
 	top:140px;
@@ -497,6 +459,7 @@ footer{
 .back {
 	transform: rotateY(180deg);
 }
+
 /*=================================================================
 	Animations
 ==================================================================*/
@@ -618,64 +581,7 @@ footer{
   	-webkit-transform-origin: center bottom;
   	transform-origin: center bottom;
 }
-/*
-@-webkit-keyframes hand-wave {
-  from {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
 
-  20% {
-    -webkit-transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
-    transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
-  }
-
-  30%,70%{
-    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
-    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
-  }
-
-  40%, 80% {
-    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
-    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
-  }
-
-  to {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-}
-@keyframes hand-wave {
-  from {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-
-  30% {
-    -webkit-transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -5deg);
-    transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -5deg);
-  }
-
-  45%{
-    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 6deg);
-    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 6deg);
-  }
-  
-  60% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-  
-  to {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-}
-.hand-wave {
-  -webkit-animation-name: hand-wave;
-  animation-name: hand-wave;
-}
-*/
 @-webkit-keyframes fadeInUp-light {
   from {
     opacity: 0;
@@ -731,6 +637,7 @@ footer{
   -webkit-animation: pileUp-right 0.5s forwards ease-out;
   animation: pileUp-right 0.5s forwards ease-out;
 }
+
 /*=================================================================
 	preloader
 ==================================================================*/
@@ -770,6 +677,7 @@ footer{
 		transform: translate(-55%,0);
 	}
 }
+
 /*=================================================================
 	sec1
 ==================================================================*/
@@ -777,7 +685,6 @@ footer{
 	position:relative;
 	padding:100px 0;
 	background-color:#1a1a1a;
-	/*background: linear-gradient(to bottom, #515151, #1B1B1B);*/
 	min-height:100%;
 	-webkit-transition: all 0.5s ease-out;
     -moz-transition: all 0.5s ease-out;
@@ -907,14 +814,12 @@ footer{
 	width:auto;
 	opacity:0.6
 }
+
 /*=================================================================
 	sec2 introduction
 ==================================================================*/
 #sec2{
 	position:relative;
-/*	background-image:url(../imgs/colors.jpg);
-	background-size:contain;
-	background-repeat: no-repeat;*/
 	background-color:rgba(255,255,255,0.97);
 	z-index:2
 }
@@ -925,96 +830,6 @@ footer{
 	margin:0;
 	padding:0
 }
-/*
-.sec2nav{
-	position: absolute;
-	top:50px;
-	z-index:9;
-	border:none;
-	right:20px;
-	height:60px;
-	opacity: 0.8;
-	text-transform: uppercase;
-	font-weight:bold;
-	color:#1a1a1a;
-}
-.sec2nav .code-link{
-	position:relative;
-	display:inline-block;
-	padding-right:50px;
-	font-size:24px;
-}
-.sec2nav .design-link{
-	position:relative;
-	display:inline-block;
-	padding-right:50px;
-	font-size:24px;
-}
-.caret{
-	margin-left:10px;
-	margin-top:-10px;
-	font-size:28px;
-}
-
-.dropdown-menu{
-	width:300px;
-	left:20px;
-	border:none;
-	font-size:20px;
-	text-align:center
-}
-
-.navbar-item div{
-	margin:0;
-	-webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-}
-.navbar-item hr{
-	border-color:#1a1a1a;
-	opacity:0.3;
-	width:90%;
-	-webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-}
-
-.nav-scrolled {
-  	position: fixed;
-  	top: 50px;
-}
-
-.portfolio{
-	position:relative;
-	padding-top:100px;
-	margin-left:15%;
-	margin-right:15%;
-	z-index:5
-}
-.portfolio .thumbnail{
-	padding:0;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.portfolio .thumbnail img{
-	width:100%;
-	height:auto
-}
-
-.transimg{
-	position:absolute;
-	display:block;
-	width:100%;
-	top:0;
-	overflow:hidden;
-	z-index:3
-}
-.transimg img{
-	width:100%;
-	height:auto
-}
-*/
 .slid-wrapper{
 	position:absolute;
 	margin:0;
@@ -1032,7 +847,6 @@ footer{
 	border:none;
 	display:inline;
 	float:left;
-	/*-webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(50,50,50,0.7)),to(rgba(80,80,80,0)));*/
 }
 .sec2mask{
 	position:absolute;
@@ -1166,6 +980,7 @@ footer{
 		bottom: -50px;
 	}
 }
+
 /*=================================================================
 	sec3 skills
 ==================================================================*/
@@ -1248,6 +1063,7 @@ footer{
     font-size: 16px;
 	opacity:0.7
 }
+
 /*=================================================================
 	sec4 portfolio
 ==================================================================*/
@@ -1267,7 +1083,6 @@ footer{
 	width:100%;
 	height:auto;
 	border-radius: 5px;
-	/*-webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(50,50,50,1)),to(rgba(80,80,80,0)), color-stop(.5,#1a1a1a));*/
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	z-index:2;
 	-webkit-transition: all 0.3s ease;
@@ -1330,6 +1145,7 @@ footer{
 		margin-top:30px;
 	}
 }
+
 /*=================================================================
 	sec5 social
 ==================================================================*/
@@ -1398,26 +1214,6 @@ footer{
 	left:150px; 
 	bottom:-100px
 }
-/*
-#facebookhint{
-	position:absolute;
-	left:50%;
-	margin-left:-250px;
-	opacity:0
-}
-#linkedinhint{
-	position:absolute;
-	left:50%;
-	margin-left:-75px;
-	opacity:0
-}
-#wechathint{
-	position:absolute;
-	left:50%;
-	margin-left:125px;
-	opacity:0
-}
-*/
 .wechat-dropup{
 	display:none
 }
@@ -1439,11 +1235,11 @@ footer{
 		padding-bottom:10px
 	}
 }
+
 /*=================================================================
 	sec6 Contact
 ==================================================================*/
 #sec6{
-	/*background-color: #D7D7D7;*/
 	background-image:url(../imgs/bgsec6.jpg);
 	background-size: cover;
 	background-repeat:no-repeat;
@@ -1483,16 +1279,6 @@ footer{
 	font-size:20px;
 	opacity:0.7
 }
-/*
-#sec6::before {
-    content: '';
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(215,215,215,1)),to(rgba(215,215,215,0.7)), color-stop(.4,rgba(255,255,255,0.97)));
-*/
 .input-field {
     margin-bottom: 10px;
 }
@@ -1514,21 +1300,6 @@ textarea.form-control {
 .form-control:focus{
 	background-color: #fff;
 }
-/*
-#submit:before {
-  background-color: #0A85BB;
-}
-
-#submit.btn-effect:after {
-  background: #2E2E2E;
-}
-.or-in-middle{
-	position: relative;
-	height: 50px;
-	margin-top:15%;
-	
-}
-*/
 .form-headline{
 	font-size:28px;
     margin-bottom: 15px;
@@ -1556,6 +1327,7 @@ textarea.form-control {
 	clip:rect(0px,300px,100px,300px);
 }
 .contact-details p a:focus span{
+	color:#1a1a1a !important;
 	-webkit-transform: translate(100px,0);
 	   -moz-transform: translate(100px,0);
 		 -o-transform: translate(100px,0); 
@@ -1641,6 +1413,12 @@ textarea.form-control {
 	.contact-details p:hover .fa-phone, .hidespan4{
 		color:#00C045 !important
 	}
+	.contact-details p a:focus span{
+		-webkit-transform: translate(120px,0);
+		   -moz-transform: translate(120px,0);
+			 -o-transform: translate(120px,0); 
+				transform: translate(120px,0);
+	}
 }
 /*TEMP*/
 form p{
@@ -1648,6 +1426,7 @@ form p{
 	text-align:center;
 	opacity:0.8
 }
+
 /*============================================================
 	Google Maps
 ==============================================================*/
