--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -298,8 +298,13 @@ footer{
 }
 
 @media(max-width:1024px) {
-	.nav-img{
+	.nav-img-wrapper{
 		opacity: 1;
+	}
+}
+@media(max-width:768px) {
+	.nav-img2{
+		display:none
 	}
 }
 @media(max-width:480px) {
@@ -308,9 +313,6 @@ footer{
 	}
 	.nav-img-wrapper{
 		margin-left: 0;
-	}
-	.nav-img2{
-		display:none
 	}
 	#chu-menu{
 		-webkit-transform: translate(-20px,0) rotate(45deg);
@@ -722,11 +724,15 @@ footer{
 		transform: translate(-55%,0);
 	}
 }
-.preloader-button{
+.preloader-button-wrapper{
 	position:relative;
-	float:left;
-	margin-top:30%;
+	width:100%;
+	top:40%;
+	text-align:center
+}
+.preloader-button{
 	border:solid 1px #fff;
+	padding:0;
 	display:none
 }
 /*=================================================================
